[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18.26"  # Downgraded to avoid base64ct 1.8.0
solana-sdk = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }  # Matching version
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11.5"
log = "0.4.22"
