[package]
name = "solana-usdc-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.7"
solana-sdk = "2.0.7"
solana-transaction-status = "2.0.7"
spl-token = { version = "5.0.0", features = ["no-entrypoint"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.9.0"
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] } # Added rt-multi-thread
env_logger = "0.11.5"
log = "0.4.22"